<resources>
    <string name="app_name">Triple-AOS</string>

    <string name="choice_title">떠나고 싶은\n도시를 선택하세요.</string>

    <!--main-->
    <string name="main_menu_home">홈</string>
    <string name="main_menu_wish">위시리스트</string>
    <string name="main_menu_travel">여행생성</string>
    <string name="main_menu_my_travel">내 여행</string>
    <string name="main_menu_mypage">마이</string>


    <string name="tab_intro">파리 여행,\n언제 떠나세요?</string>
    <string name="tab_plan">전체일정</string>
    <string name="tab_flight">항공</string>
    <string name="tab_accommodation">숙소</string>
    <string name="tab_food">맛집</string>
    <string name="tab_tour">투어·티켓</string>
    <string name="add_plan">일정을 등록하세요.</string>

    <string name="first_plan">1일차</string>
    <string name="second_plan">2일차</string>
    <string name="third_plan">3일차</string>
    <string name="first_date">02.04(토)</string>
    <string name="second_date">02.05(일)</string>
    <string name="third_date">02.06(월)</string>
    <string name="save_plan">전체 저장</string>

    <string name="default_time">00:00</string>
    <string name="default_plan">내용을 입력하세요.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--home-->
    <string name="home_triple">TRIPLE</string>
    <string name="home_title_description">다시 열린 해외여행,\n도쿄에서 워밍업!</string>
    <string name="home_chip_airline_ticket">항공권</string>
    <string name="home_chip_lodging">숙소</string>
    <string name="home_chip_tour_ticket">투어 티켓</string>
    <string name="home_chip_foreign_package">해외 페키지</string>
    <string name="home_chip_travle_magagine">여행 메거진</string>
    <string name="home_chip_travle_osaka">오사카 여행</string>
    <string name="home_chip_travel_japane">일본 특가</string>
    <string name="home_chip_rental_car">혜택 렌터카</string>
    <string name="home_chip_pecial_air_ticket">특가 항공권</string>
    <string name="home_chip_travle_jeju">제주 여행</string>
    <string name="home_title_real_time_popular">실시간 인기 여행지</string>
    <string name="home_show_whole">전체 보기</string>
    <string name="home_title_show_recent">최근 본 상품</string>
    <string name="home_description_vali">아야나 짐바란 리조트 앤 스파, 발리</string>
    <string name="home_description_ubot">코마네카 앳 라사 사양 - 스 서티피드</string>


</resources>