<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeFragment">

    <ScrollView
        android:id="@+id/sv_home_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_home_triple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/notosans_bold"
                android:text="@string/home_triple"
                android:textSize="17dp"
                app:layout_constraintStart_toStartOf="@id/cl_home"
                app:layout_constraintTop_toTopOf="@id/cl_home" />

            <ImageView
                android:id="@+id/tv_home_notice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="11dp"
                android:src="@drawable/ic_notice"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_home_triple" />

            <ImageView
                android:id="@+id/iv_home_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search"
                app:layout_constraintEnd_toStartOf="@id/tv_home_notice"
                app:layout_constraintTop_toTopOf="@id/tv_home_triple" />

            <TextView
                android:id="@+id/tv_home_title_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="23dp"
                android:fontFamily="@font/notosans_bold"
                android:text="@string/home_title_description"
                android:textSize="24dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_home_triple" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_nation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="26dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_home_title_description"
                tools:itemCount="5"
                tools:listitem="@layout/item_list_home_nation" />

            <ImageView
                android:id="@+id/iv_airplane"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="41dp"
                android:src="@drawable/airplane"
                app:layout_constraintEnd_toEndOf="@id/cl_home"
                app:layout_constraintStart_toStartOf="@id/cl_home"
                app:layout_constraintTop_toBottomOf="@id/rv_nation" />

            <TextView
                android:id="@+id/tv_home_real_time_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="44dp"
                android:fontFamily="@font/notosans_bold"
                android:text="@string/home_title_real_time_popular"
                android:textSize="16dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_airplane" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="19dp"
                android:fontFamily="@font/notosans_medium"
                android:text="@string/home_show_whole"
                android:textSize="10dp"
                app:layout_constraintBottom_toBottomOf="@id/tv_home_real_time_popular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_home_real_time_popular" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>